--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Password Maker</title>
     
     <!-- Thumbnails -->
-	
+	<link rel="shortcut icon" type="image/jpg" href=”images/eric-as-a-favicon.ico”/>
 
 	<!-- Libraries -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css">
