updated favicon html snippet

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A website that creates a strong password for the user based on several user inputs.">
     
-	<!-- Title -->
+    <!-- Title -->
     <title>Password Maker</title>
     
     <!-- Thumbnails -->
-	<link rel="shortcut icon" type="image/jpg" href=”images/eric-as-a-favicon.ico”/>
+    <link rel="icon" type="image/ico" href="images/eric-as-a-favicon.ico"/>
 
 	<!-- Libraries -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css">
