add link to github

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </fieldset>
         <br>
         <fieldset>
-            <p id="i-was-here">Created by Eric O&apos;Brien</p>
+            <p id="i-was-here">Created by <a href="https://github.com/cireneirbo">Eric O&apos;Brien</a></p>
         </fieldset>
         <br>
 
